tests/ui/zero-contracts.stderr
error: no span attributes were specified

         = help: add a `#[trace_field]`

 --> tests/ui/zero-contracts.rs:3:1
  |
3 | #[server_send]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `server_send` (in Nightly builds, run with -Z macro-backtrace for more info)
