tests/ui/zero-contracts.rs
use tracing_attributes_http::server_send;

#[server_send]
fn f() {}

fn main() {}
